<resources>
    <string name="app_name">Prog-o-thon Project</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="image">image</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_conditions_and_privacy_policy">By creating an account you agree to our \n terms and conditions and privacy policy</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here_click_below_to_register">New Here? Click below to register</string>
    <string name="search">Search</string>
    <string name="description">description</string>
    <string name="item_1">Item 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_0_followers">0 followers</string>
    <string name="contact_johndoe_email_com">Contact: johndoe@email.com</string>
    <string name="software_developer">Software Developer</string>
    <string name="john_doe">John Doe</string>
</resources>