<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <!-- Profile Picture -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/h"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <!-- Bio -->
            <TextView
                android:id="@+id/bioTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/software_developer"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

            <!-- Contact Information -->
            <TextView
                android:id="@+id/contactInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/contact_johndoe_email_com"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <!-- User Name -->



    </LinearLayout>

    <!-- Edit Profile Button -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/_0_followers"
            android:textColor="@android:color/white"

            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="Signout"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextContrastCheck">

        </Button>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/recycler_view_item" />


</LinearLayout>